Add .tfstate files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ terraform/.terraform
 terraform/front-end-infra/.terraform
 terraform/front-end-infra/terraform.tfstate
 terraform/front-end-infra/terraform.tfstate.backup
+terraform/front-end-infra/terraform.tfstate
+terraform/front-end-infra/terraform.tfstate.backup
