Add .gitignore for Terraform sensitive files

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,8 @@ terraform/front-end-infra/terraform.tfstate
 terraform/front-end-infra/terraform.tfstate.backup
 terraform/front-end-infra/terraform.tfstate
 terraform/front-end-infra/terraform.tfstate.backup
+
+# Terraform
+*.tfstate
+*.tfstate.backup
+.terraform/
