--- a/.gitignore
+++ b/.gitignore
@@ -83,8 +83,8 @@ terraform/.terraform
 terraform/front-end-infra/.terraform
 terraform/front-end-infra/terraform.tfstate
 terraform/front-end-infra/terraform.tfstate.backup
-terraform/front-end-infra/terraform.tfstate
-terraform/front-end-infra/terraform.tfstate.backup
+.terraform.tfstate
+.terraform.tfstate.backup
 
 # Terraform
 *.tfstate
