--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,17 @@
 {
   "name": "backend",
   "version": "1.0.0",
-
   "type": "module",
   "main": "app.js",
+  "description": "",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
-  "main": "index.js",
-  "scripts": {
+    "dev": "nodemon server.js",
     "test": "jest"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -25,10 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
-    "dotenv": "^17.0.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "eslint": "^9.30.0",
