--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,12 @@ jobs:
     defaults:
       run:
         working-directory: backend
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
@@ -24,7 +25,9 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test
+        run: |
+          echo "Running tests..."
+          npm test || { echo "Tests failed!"; exit 1; }
 
       - name: Run ESLint
         run: npm run lint
@@ -32,6 +35,7 @@ jobs:
   security-scanning:
     needs: build-and-test
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,6 +58,7 @@ jobs:
   docker-build-push:
     needs: security-scanning
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -74,6 +79,7 @@ jobs:
   deploy:
     needs: docker-build-push
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
